# donor-intelligence-platform

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  postCreate.sh
dags/: hello_world.py
docs/: airflow-setup.md  data-exploration.md  gcp-setup.md  identity-resolution-fixtures.md  mart-definitions.md
pipelines/identity/: build_identity.py
pipelines/ingest/: load_raw_fec.py  schema.py
pipelines/staging/: build_staging.py
pipelines/utils/: env.py  normalize.py
scripts/: explore_fec.py  setup_bigquery.py
sql/core/: dim_donors.sql
sql/marts/exploration/: engagement_score_distribution_analysis.sql
sql/staging/: stg_contributions.sql
tests/: conftest.py
tests/fixtures/: fec_fixture.csv  identity_fixtures.csv
tests/integration/: test_bigquery_connection.py  test_build_identity.py  test_build_staging.py  test_load_raw_fec.py
tests/unit/: test_fec_sample.py  test_normalize.py  test_project_structure.py  test_schema.py
