[project]
name = "donor-intelligence-platform"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "google-cloud-bigquery>=3.11",
]

[dependency-groups]
dev = [
  "pytest>=8.2",
  "ruff>=0.4",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
