[project]
name = "donor-intelligence-platform"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "google-cloud-bigquery>=3.11",
    "apache-airflow==2.9.1",
    "pandas>=3.0.2",
    "pandas-gbq>=0.35.0",
]

[dependency-groups]
dev = [
  "pytest>=8.2",
  "ruff>=0.4",
]

[tool.uv]
package = false


[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
